--- a/imageFilter/index.html
+++ b/imageFilter/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <canvas class="canvas1"></canvas>
+    <canvas id="canvas1"></canvas>
     <script src="scripts.js"></script>
   </body>
 </html>
